# zkrust

./: .gitignore  Cargo.toml  LICENSE  README.md
Docs/: PRD.md
crates/cli/: Cargo.toml
crates/cli/src/: circuits.rs  main.rs
crates/curves/: Cargo.toml
crates/curves/benches/: curve_ops.rs
crates/curves/src/: g1.rs  g2.rs  lib.rs  msm.rs  pairing.rs
crates/fields/: Cargo.toml
crates/fields/benches/: field_ops.rs
crates/fields/src/: fp.rs  fp12.rs  fp2.rs  fp6.rs  fr.rs  lib.rs  traits.rs  utils.rs
crates/groth16/: Cargo.toml
crates/groth16/benches/: groth16_bench.rs
crates/groth16/examples/: range_proof.rs
crates/groth16/src/: lib.rs  proof.rs  prover.rs  setup.rs  verifier.rs
crates/polynomials/: Cargo.toml
crates/polynomials/src/: dense.rs  kzg.rs  lib.rs  ntt.rs
crates/r1cs/: Cargo.toml
crates/r1cs/src/: circuit.rs  constraint.rs  gadgets.rs  lib.rs  system.rs
