[package]
name = "zkrust-curves"
description = "BN254 elliptic curve groups (G1, G2) and Ate pairing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
zkrust-fields = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "curve_ops"
harness = false
