[package]
name = "zkrust-fields"
description = "Finite field arithmetic for BN254 (Fp, Fr, extension fields)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rand = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "field_ops"
harness = false
